--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#team">
-                  About Us
+                  About
                 </a>
               </li>
               <!-- <li class="nav-item">
@@ -59,7 +59,7 @@
               </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#testimonial">
-                  Happy Clients
+                  Clients
                 </a>
               </li>
               <!-- <li class="nav-item">
