--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
           <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
               <div class="contents">
-                <h2 class="head-title">Welcome to Medikal</h2>
-                <p>We deliver free home delivery of medicine and medical shop items in Pune City with Discounts</p>
+                <h2 class="head-title wow bounceInDown" data-wow-delay="0.3s">Welcome to Medikal</h2>
+                <p class="wow bounceInUp" data-wow-delay="0.4s">We deliver free home delivery of medicine and medical shop items in Pune City with Discounts</p>
                 <div class="header-button">
-                  <a href="#order" class="btn btn-common">Order Now</i></a>
+                  <a href="#order" class="btn btn-common wow slideInLeft" data-wow-delay="0.5s">Order Now</i></a>
                   <!-- <a href="#" class="btn btn-border video-popup">Learn More</i></a> -->
                 </div>
               </div>
@@ -107,7 +107,7 @@
     <section id="services" class="section-padding">
       <div class="container">
         <div class="section-header text-center">
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Services</h2>
+          <h2 class="section-title wow bounceInDown" data-wow-delay="0.3s">Our Services</h2>
           <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
 
@@ -130,7 +130,7 @@
           <!-- Services item -->
           
           <div class="col-md-6 col-lg-4 col-xs-12 offset-lg-4">
-            <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
+            <div class="services-item wow fadeInLeft" data-wow-delay="0.6s">
               <div class="icon">
                 <!-- <i class="lni-stats-up"></i> -->
                 <img src="assets/img/services/note.png">
@@ -168,7 +168,7 @@
           </div> -->
           <!-- Services item -->
           <div class="col-md-6 col-lg-4 col-xs-12 offset-lg-4">
-            <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
+            <div class="services-item wow fadeInLeft" data-wow-delay="1.5s">
               <div class="icon">
                 <!-- <i class="lni-mobile"></i> -->
                 <img src="assets/img/services/cosmetics.png">
@@ -202,18 +202,18 @@
 <section id="order" class="section-padding">
     <div class="container">
         <div class="text-center">
-    <form class="wow fadeInUp" data-wow-delay="0.3s">
-            <h4 class="wow fadeInDown" data-wow-delay="0.6s">Order Now</h4>
-            <p class="wow fadeInDown" data-wow-delay="0.6s">We deliver free home delivery of medicine and medical shop items in Pune City with Discounts.</p>
+    <form class="wow fadeInUp" data-wow-delay="0.6s">
+            <h4 class="wow bounceInUp" data-wow-delay="0.3s">Order Now</h4>
+            <p class="wow bounceInUp" data-wow-delay="0.4s">We deliver free home delivery of medicine and medical shop items in Pune City with Discounts.</p>
             <div class="form-group">
                 <input type="text" name="name" class="form-control" placeholder="Your Name" required>
                 <input type="number" name="pnumber" class="form-control" placeholder="Your Phone Number" required maxlength="10" minlength="10" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                 <textarea name="address" class="form-control" placeholder="Your Address" required></textarea>   
                 <input type="text" name="orderdescription" class="form-control" placeholder="If Any Notes"> 
                 <input type="file" class="form-control-file" id="uploadfile" required>
-                <button class="btn wow fadeInDown" data-wow-delay="0.6s" type="submit">Confirm Order</button>
+                <button class="btn wow bounceInUp" data-wow-delay="0.4s" type="submit">Confirm Order</button>
             </div>
-            <div class="call-whatsapp wow fadeInDown" data-wow-delay="0.6s">
+            <div class="call-whatsapp wow bounceInUp" data-wow-delay="0.4s">
                 <p>CALL/WHATSAPP US: <a target="_blank" href="https://wa.me/+919876543210">9876543210</a></p>
             </div>
         </form>
@@ -229,21 +229,21 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-12 col-xs-12 info">
-            <div class="about-wrapper wow fadeInLeft" data-wow-delay="0.3s">
+            <div class="about-wrapper">
               <div>
                 <div class="site-heading">
                   <!-- <p class="mb-3">Manage Statistics</p> -->
-                  <h2 class="section-title">MEDIKAL - WE ARE ALWAYS READY FOR HELP</h2>
+                  <h2 class="section-title wow rotateInDownLeft" data-wow-delay="0.3s">MEDIKAL - WE ARE ALWAYS READY FOR HELP</h2>
                 </div>
-                <div class="content">
+                <div class="content wow rotateInUpLeft" data-wow-delay="0.3s">
                   <p>Free to contact.Order medicines online.We deliver medicines on time. Trust Us.
                   </p>
-                  <a href="#order" class="btn btn-common mt-3">Order Now</a>
+                  <a href="#order" class="btn btn-common mt-3 wow slideInLeft" data-wow-delay="0.4s">Order Now</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+          <div class="col-lg-6 col-md-12 col-xs-12 wow slideInRight" data-wow-delay="0.3s">
             <img class="img-fluid" src="assets/img/banner-2/64669.jpg" alt="" >
           </div>
         </div>
@@ -310,7 +310,7 @@
     <section id="features" class="section-padding">
       <div class="container">
         <div class="section-header text-center">          
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">We Provide</h2>
+          <h2 class="section-title wow bounceInUp" data-wow-delay="0.3s">We Provide</h2>
           <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
         <div class="row">
@@ -348,7 +348,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-            <div class="show-box wow fadeInUp" data-wow-delay="0.3s">
+            <div class="show-box wow rotateIn" data-wow-delay="0.3s">
               <img src="assets/img/feature/intro-mobile.png" alt="">
             </div>
           </div>
@@ -396,7 +396,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h2 class=" wow fadeInDown animated" data-wow-delay="0.3s">Happy Clients</h2>
+            <h2 class=" wow wow bounceInUp" data-wow-delay="0.3s">Happy Clients</h2>
             <div class="shape-black wow fadeInDown animated" data-wow-delay="0.3s"></div>
             <div id="testimonials" class="owl-carousel wow fadeInUp" data-wow-delay="1.2s">
               <div class="item">
