--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 col-mb-12 text-center">
-              <div class="widget">
+              <div class="widget wow slideInLeft" data-wow-delay="0.3s">
                 <h3 class="footer-logo"><img src="assets/img/logo.png" alt=""></h3>
                 <div class="textwidget">
                   <p> 105 Madison Avenue<br> Third Floor New York, NY 10016</p>
@@ -584,8 +584,8 @@
               </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 text-center">
-              <h3 class="footer-titel">FOLLOW US</h3>
-                <div class="social-icon">
+              <h3 class="footer-titel wow fadeInDown" data-wow-delay="0.3s">FOLLOW US</h3>
+                <div class="social-icon wow fadeInDown" data-wow-delay="0.4s">
                   <a class="facebook" href="#"><i class="lni-facebook-filled"></i></a>
                   <a class="twitter" href="#"><i class="lni-twitter-filled"></i></a>
                   <a class="instagram" href="#"><i class="lni-instagram-filled"></i></a>
@@ -593,15 +593,15 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-6 text-center">
-              <h3 class="footer-titel">CALL US </h3>
-              <ul class="address">
+              <h3 class="footer-titel wow fadeInDown" data-wow-delay="0.3s">CALL US </h3>
+              <ul class="address wow fadeInDown" data-wow-delay="0.4s">
                 <i class="lni-phone-handset"></i> 
-                  <li><a href="#"> +91 9876543210</a></li>
+                  <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="#"> +91 9876543210</a></li>
               </ul>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-6 text-center">
-              <h3 class="footer-titel">EMAIL US </h3>
-              <ul class="address">
+              <h3 class="footer-titel wow slideInRight" data-wow-delay="0.3s">EMAIL US </h3>
+              <ul class="address wow slideInRight" data-wow-delay="0.3s">
                 <i class="lni-envelope"></i>
                 <!-- <li>
                   <a href="#"><i class="lni-map-marker"></i> 105 Madison Avenue<br> Third Floor New York, NY 10016</a>
@@ -609,7 +609,7 @@
                 <!-- <li>
                   <a href="#"><i class="lni-phone-handset"></i> P: +84 846 250 592</a>
                 </li> -->
-                <li>
+                <li class="wow slideInRight" data-wow-delay="0.3s">
                   <a href="#"> contact@uideck.com</a>
                 </li>
                 
